[gd_scene load_steps=21 format=3 uid="uid://byli3ck6gpqtc"]

[ext_resource type="Script" uid="uid://dk25ownu14rv8" path="res://actors/player/player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://cu2mhoqnrgeam" path="res://input/hotbar_input.gd" id="4_yw30f"]
[ext_resource type="Script" uid="uid://gyp8bshfrfoj" path="res://actors/generic/health.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://cg3y6l7u7bglb" path="res://actors/player/interact_detector.gd" id="5_hiosj"]
[ext_resource type="Script" uid="uid://dsrxhicfffw3e" path="res://actors/player/pickup_detector.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://cvmwf84dan6g7" path="res://item/player/equipment.gd" id="6_g6k8r"]
[ext_resource type="Script" uid="uid://dgkass0sic6wa" path="res://actors/generic/draining_stat.gd" id="7_boad6"]
[ext_resource type="Script" uid="uid://cy65fv0u3uiga" path="res://item/generic/item_equip_display.gd" id="8_a744p"]
[ext_resource type="Script" uid="uid://c5rhs0y5iry7d" path="res://input/mouse_input.gd" id="9_388e2"]
[ext_resource type="Script" uid="uid://co0hu31xc486a" path="res://item/item_container.gd" id="10_lsln6"]
[ext_resource type="Script" uid="uid://dplrhtm2y2ben" path="res://actors/player/interaction.gd" id="12_ssdk0"]
[ext_resource type="Script" uid="uid://chxhldiu0nvle" path="res://input/world_container_input.gd" id="13_7aotg"]
[ext_resource type="PackedScene" uid="uid://dfb3edd4wnnag" path="res://actors/character_sprite.tscn" id="13_k67x5"]
[ext_resource type="Texture2D" uid="uid://csxjjom3dyxfa" path="res://actors/sprites/head/white_head_1.png" id="14_0wchr"]
[ext_resource type="Texture2D" uid="uid://oyto6h4h2ewn" path="res://actors/sprites/torso/torso_blue_jacket.png" id="15_qrxv1"]
[ext_resource type="Texture2D" uid="uid://ddl3g6wo4371s" path="res://actors/sprites/hand/hands_white_1.png" id="16_dqf5y"]
[ext_resource type="Texture2D" uid="uid://wcmxajlvsg1i" path="res://actors/sprites/leg/legs_black_1.png" id="17_otn2r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkbax"]
size = Vector2(41, 62)

[sub_resource type="CircleShape2D" id="CircleShape2D_yw30f"]
radius = 200.01

[sub_resource type="CircleShape2D" id="CircleShape2D_lsln6"]
radius = 170.49634

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("inventory", "hotbar", "pickups") groups=["persist", "player"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_onrkg")
speed = 500
inventory = NodePath("Containers/Inventory")
hotbar = NodePath("Containers/Hotbar")
pickups = NodePath("Containers/Pickups")
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_rkbax")

[node name="HotbarInput" type="Node" parent="."]
script = ExtResource("4_yw30f")
metadata/_custom_type_script = "uid://cu2mhoqnrgeam"

[node name="PickupRadius" type="Area2D" parent="." node_paths=PackedStringArray("pickup_container")]
collision_layer = 0
collision_mask = 8
script = ExtResource("5_qjkh3")
pickup_container = NodePath("../Containers/Pickups")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource("CircleShape2D_yw30f")

[node name="InteractableRadius" type="Area2D" parent="." node_paths=PackedStringArray("player", "raycast")]
collision_layer = 0
collision_mask = 16
script = ExtResource("5_hiosj")
player = NodePath("..")
raycast = NodePath("RayCast2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableRadius"]
shape = SubResource("CircleShape2D_lsln6")

[node name="RayCast2D" type="RayCast2D" parent="InteractableRadius"]
collision_mask = 17

[node name="Health" type="Node" parent="."]
script = ExtResource("5_g6k8r")
metadata/_custom_type_script = "uid://gyp8bshfrfoj"

[node name="Equipment" type="Node" parent="." node_paths=PackedStringArray("hotbar_container", "equip_display")]
script = ExtResource("6_g6k8r")
hotbar_container = NodePath("../Containers/Hotbar")
equip_display = NodePath("../ItemEquipDisplay")
metadata/_custom_type_script = "uid://cvmwf84dan6g7"

[node name="Hunger" type="Node" parent="."]
script = ExtResource("7_boad6")
metadata/_custom_type_script = "uid://dgkass0sic6wa"

[node name="Thirst" type="Node" parent="."]
script = ExtResource("7_boad6")
drain_rate = 0.02
metadata/_custom_type_script = "uid://dgkass0sic6wa"

[node name="ItemEquipDisplay" type="Node2D" parent="."]
scale = Vector2(0.66, 0.66)
script = ExtResource("8_a744p")
distance_from_user = 70
metadata/_custom_type_script = "uid://cy65fv0u3uiga"

[node name="MouseInput" type="Node2D" parent="."]
script = ExtResource("9_388e2")
metadata/_custom_type_script = "uid://c5rhs0y5iry7d"

[node name="Containers" type="Node" parent="."]

[node name="Inventory" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 64
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="Hotbar" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 9
container_name = 1
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="Pickups" type="Node" parent="Containers"]
script = ExtResource("10_lsln6")
capacity = 16
container_name = 2
metadata/_custom_type_script = "uid://co0hu31xc486a"

[node name="Interaction" type="Node" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("12_ssdk0")
player = NodePath("..")
metadata/_custom_type_script = "uid://dplrhtm2y2ben"

[node name="WorldContainerInput" type="Node2D" parent="."]
script = ExtResource("13_7aotg")

[node name="CharacterSprite" parent="." node_paths=PackedStringArray("character_body") instance=ExtResource("13_k67x5")]
character_body = NodePath("..")
head_texture = ExtResource("14_0wchr")
torso_texture = ExtResource("15_qrxv1")
left_arm_texture = ExtResource("16_dqf5y")
right_arm_texture = ExtResource("16_dqf5y")
left_leg_texture = ExtResource("17_otn2r")
right_leg_texture = ExtResource("17_otn2r")

[connection signal="equip_slot" from="HotbarInput" to="Equipment" method="_on_equip_slot"]
[connection signal="area_entered" from="PickupRadius" to="PickupRadius" method="_on_area_entered"]
[connection signal="area_exited" from="PickupRadius" to="PickupRadius" method="_on_area_exited"]
[connection signal="area_entered" from="InteractableRadius" to="InteractableRadius" method="_on_area_entered"]
[connection signal="area_exited" from="InteractableRadius" to="InteractableRadius" method="_on_area_exited"]
[connection signal="nearest_interactable_changed" from="InteractableRadius" to="Interaction" method="_on_nearest_interactable_changed"]
[connection signal="nearest_interactable_changed" from="InteractableRadius" to="WorldContainerInput" method="interactable_changed"]
[connection signal="equipment_changed" from="Equipment" to="ItemEquipDisplay" method="set_instance"]
[connection signal="origin_created" from="ItemEquipDisplay" to="Equipment" method="_set_origin_node"]
[connection signal="mouse_position" from="MouseInput" to="Equipment" method="_set_target"]
[connection signal="mouse_position" from="MouseInput" to="ItemEquipDisplay" method="_update_target"]
